# jira-downloader

./: Cargo.toml  LICENSE  README.md
src/: app.rs  jira.rs  main.rs
